src/objects/Inventory__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Description of inventory</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Quantity__c</fullName>
        <label>Total Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Inventory</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Inventory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>